# pansemitic-lexicon

./: .gitignore  CLAUDE.md  buildembedding.py  cognates2.csv  cognates2.json  cognates_good.csv  cognates_good.json  false-positives.txt  findcognates2.py  ipa_chart.html  kaikki.py  loss.py  main.py  morphology.py  pyproject.toml  reconstruction.py
