[project]
name = "pansemitic-lexicon"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "datasets>=4.8.4",
    "einops>=0.8.2",
    "numpy>=2.0",
    "orjson>=3.11.7",
    "sentence-transformers>=5.3.0",
    "torch>=2.9",
    "transformers>=4.51",
]
